ej. IF 4 c/lbl&inp v2

--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="lbl-sop">Quiere comer sopa..........?</label>
-    <input type="text" name="" id="lbl-sop">
-    <br>
-    <label for="lbl-ver">Agrega verduras..............?</label>
-    <input type="text" name="" id="lbl-ver">
-    <br>
-    <label for="lbl-car">Agrega Carne..................?</label>
-    <input type="text" name="" id="lbl-car">
-    <br>
-    <label for="lbl-poll">Agrega Pollo...................?</label>
-    <input type="text" name="" id="lbl-poll">
-    <br>
-    <label for="lbl-cond">Agrega Condimentos......?</label>
-    <input type="text" name="" id="lbl-cond">
-    <br>
-    <label for="lbl-cuca">Agrega Cubo de Caldo...?</label>
-    <input type="text" name="" id="lbl-cuca">
+    <h3>Soy SOUPY - Preparo ricas Sopas</h3>
+    <h4>Ingresa "s" para confirmar o nada si no.</h4>
+    <label for="lbl-sop">Desea tomar una sopa?.................:</label>
+    <input type="text" name="" id="lbl-sop" style="text-align:center ; width:20px ;margin-left: 25px;">
     <br><br>
-    <button onclick ="verificaSopa()">Presione para preparar la sopa</button>
+    <label for="lbl-ver">Agrega Verduras?.........................:</label>
+    <input type="text" name="" id="lbl-ver" style="text-align:center ; width:20px ;margin-left: 25px;">
+    <br>
+    <label for="lbl-car">Agrega Carne?..............................:</label>
+    <input type="text" name="" id="lbl-car" style="text-align:center ; width:20px ;margin-left: 23px;">
+    <br>
+    <label for="lbl-poll">Agrega Pollo?...............................:</label>
+    <input type="text" name="" id="lbl-poll" style="text-align:center ; width:20px ;margin-left: 23px;">
+    <br>
+    <label for="lbl-cond">Agrega Condimentos?..................:</label>
+    <input type="text" name="" id="lbl-cond" style="text-align:center ; width:20px ;margin-left: 23px;">
+    <br>
+    <label for="lbl-cuca">Agrega Cubo de Caldo? ..............:</label>
+    <input type="text" name="" id="lbl-cuca" style="text-align:center ; width:20px ; margin-left: 24px;">
     <br><br>
-    <p Id="mi-salida"></p>
+    <button onclick ="verificaSopa()" style="font-size: 16px;">Presiona aqui para preparar la sopa</button>
+    <br><br>
+    <p Id="mi-salida" style="font-size: 20px;"></p>
     <br><br>
     <script src="ejercicio4.js"></script>
 </body>
